fix horizontal scroll overflow on board view

--- a/sass/main.scss
+++ b/sass/main.scss
@@ -8,7 +8,7 @@
     padding-left: 6rem; //cb
     display: grid;
      
-    grid-template-columns: repeat(3, 80vmin); //cb
+    grid-template-columns: repeat(3, 50vmin); //cb
     grid-template-rows: auto;
     grid-gap: 5rem;
   }
@@ -147,6 +147,10 @@
 
 .navbar{
     border:  5px solid gray;
+}
+
+ul li {
+    list-style-type: none;
 }
 //   .pinCard:hover { // these are glitchy so commented out at the moment -cb
 //     top: 2rem;
